修复了部分bug